--- a/style.css
+++ b/style.css
@@ -20,7 +20,22 @@ border: solid red 3px;
     color: white;
     padding: 20px;
     text-align: center;
+    position: fixed; 
+    top: 0; 
+    width: 100%;
+    z-index: 10; 
+}
 
+#button {
+    background-color: blue;
+    color: white;
+    padding: 15px 30px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    float: right; 
+    margin-left: 20px; 
 }
 
 .title {
@@ -29,18 +44,8 @@ border: solid red 3px;
     margin-bottom: 20px;
 }
 
-#button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 15px 30px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
 #button:hover {
-    background-color: #45a049;
+    background-color: red;
 }
 
 .menu {
